fix test for visible inline targets
git-svn-id: http://svn.code.sf.net/p/docutils/code/trunk@10162 929543f6-e4f2-0310-98a6-ba3bd3dd1d04

--- a/sandbox/manpage-writer/expected-mandoc/references.man
+++ b/sandbox/manpage-writer/expected-mandoc/references.man
@@ -97,6 +97,8 @@ The hyperlink target above points to this paragraph.
 .INDENT 0.0
 .IP \(bu 2
 bullet list
+.sp
+second item is an inline target.
 .IP \(bu 2
 second item, with hyperlink target.
 .UNINDENT
