LaTeX writer: don't write labels for implicit IDs that are not referenced.
With LaTeX-generated PDFs, there is no (easy) way to link to a fragment from
an external source. Therefore, we only need `\label` macros for IDs that actually
are either from an explicit target (or a directive with "name" option) or
referenced to from the current document (internal cross-links).

This drops most labels from section titles, making the TeX file less verbose
and faster to compile.

git-svn-id: http://svn.code.sf.net/p/docutils/code/trunk@10284 929543f6-e4f2-0310-98a6-ba3bd3dd1d04

--- a/docutils/test/functional/expected/cyrillic.tex
+++ b/docutils/test/functional/expected/cyrillic.tex
@@ -32,23 +32,17 @@
 \begin{document}
 
 
-\section{Заголовок%
-  \label{section-1}%
-}
+\section{Заголовок}
 
 первый пример: «Здравствуй, мир!»
 
 
-\section{Title%
-  \label{title}%
-}
+\section{Title}
 
 \foreignlanguage{english}{first example: “Hello world”.}
 
 
-\section{Примечания%
-  \label{section-2}%
-}
+\section{Примечания}
 
 Этот документ испытивает изображение LaTeXом кириллических букв.
 
