--- a/docutils/test/functional/expected/length_units_xetex.tex
+++ b/docutils/test/functional/expected/length_units_xetex.tex
@@ -74,8 +74,7 @@
   pdftitle={Test length specifications},
 }
 
-\title{Test length specifications%
-  \label{test-length-specifications}}
+\title{Test length specifications}
 \author{}
 \date{}
 
@@ -84,9 +83,7 @@
 \maketitle
 
 
-\section{Images and Figures%
-  \label{images-and-figures}%
-}
+\section{Images and Figures}
 
 \begin{figure}
 \noindent\makebox[\linewidth][c]{\includegraphics[scale=1]{../input/data/blue square.png}}
@@ -184,9 +181,7 @@
 \end{figure}
 
 
-\section{ch, em, and rem: \includegraphics[height=1\DUchdimen]{../input/data/blue square.png} \includegraphics[height=1em]{../input/data/blue square.png} \includegraphics[height=1\DUremdimen]{../input/data/blue square.png}%
-  \label{ch-em-and-rem-test1ch-test1em-test1rem}%
-}
+\section{ch, em, and rem: \includegraphics[height=1\DUchdimen]{../input/data/blue square.png} \includegraphics[height=1em]{../input/data/blue square.png} \includegraphics[height=1\DUremdimen]{../input/data/blue square.png}}
 
 Image height 1ch, 1em, and 1rem: \includegraphics[height=1\DUchdimen]{../input/data/blue square.png} \includegraphics[height=1em]{../input/data/blue square.png} \includegraphics[height=1\DUremdimen]{../input/data/blue square.png}
 
@@ -194,9 +189,7 @@ The units \textquotedbl{}em\textquotedbl{} and \textquotedbl{}ch\textquotedbl{} 
 The unit \textquotedbl{}rem\textquotedbl{} is tied to the document root fontsize.
 
 
-\section{Tables%
-  \label{tables}%
-}
+\section{Tables}
 
 \setlength{\DUtablewidth}{\dimexpr\linewidth-3\arrayrulewidth\relax}%
 \begin{longtable*}{|p{\DUcolumnwidth{0.500}}|p{\DUcolumnwidth{0.500}}|}
