--- a/docutils/test/functional/expected/latex_memoir.tex
+++ b/docutils/test/functional/expected/latex_memoir.tex
@@ -196,11 +196,9 @@
 }
 
 \title{reStructuredText Test Document%
-  \protect\label{restructuredtext-test-document}%
   \protect\label{doctitle}%
   \\%
   \DUdocumentsubtitle{Examples of Syntax Constructs}%
-  \protect\label{examples-of-syntax-constructs}%
   \protect\label{subtitle}}
 \author{David Goodger\\
 123 Example Street\\
@@ -271,13 +269,12 @@ reStructuredText construct.
 
 \pagebreak[4] % start ToC on new page
 
+\phantomsection\label{table-of-contents}
 \renewcommand{\contentsname}{Table of Contents}
 \tableofcontents
 
 
-\chapter{1   Structural Elements%
-  \label{structural-elements}%
-}
+\chapter{1   Structural Elements}
 
 
 \section{1.1   Section Title%
@@ -285,23 +282,17 @@ reStructuredText construct.
 }
 
 
-\subsection{1.1.1   Section Subtitle%
-  \label{section-subtitle}%
-}
+\subsection{1.1.1   Section Subtitle}
 
 Lone subsections are converted to a section subtitle by a transform
 activated with the \texttt{-{}-section-subtitles} command line option or the
 \texttt{sectsubtitle-xform} configuration value.
 
 
-\section{1.2   Empty Section%
-  \label{empty-section}%
-}
+\section{1.2   Empty Section}
 
 
-\section{1.3   Transitions%
-  \label{transitions}%
-}
+\section{1.3   Transitions}
 
 Here's a transition:
 
@@ -319,9 +310,7 @@ It divides the section.  Transitions may also occur between sections:
 }
 
 
-\section{2.1   Paragraphs%
-  \label{paragraphs}%
-}
+\section{2.1   Paragraphs}
 
 A paragraph.
 
@@ -366,9 +355,7 @@ If the \texttt{-{}-pep-references} option was supplied, there should be a
 live link to PEP 258 here.
 
 
-\section{2.2   Bullet Lists%
-  \label{bullet-lists}%
-}
+\section{2.2   Bullet Lists}
 
 \begin{itemize}
 \item A bullet list
@@ -404,9 +391,7 @@ Paragraph 2 of item 2.
 \end{itemize}
 
 
-\section{2.3   Enumerated Lists%
-  \label{enumerated-lists}%
-}
+\section{2.3   Enumerated Lists}
 
 \begin{enumerate}
 \item Arabic numerals.
@@ -457,9 +442,7 @@ Paragraph 2 of item 2.
 \end{enumerate}
 
 
-\section{2.4   Definition Lists%
-  \label{definition-lists}%
-}
+\section{2.4   Definition Lists}
 
 \begin{description}
 \item[{Term}] 
@@ -478,9 +461,7 @@ Definition
 \end{description}
 
 
-\section{2.5   Field Lists%
-  \label{field-lists}%
-}
+\section{2.5   Field Lists}
 
 \begin{DUfieldlist}
 \item[{what:}]
@@ -501,9 +482,7 @@ doesn't get stripped away.)}
 \end{DUfieldlist}
 
 
-\section{2.6   Option Lists%
-  \label{option-lists}%
-}
+\section{2.6   Option Lists}
 
 For listing command-line options:
 
@@ -531,9 +510,7 @@ There must be at least two spaces between the option and the
 description.
 
 
-\section{2.7   Literal Blocks%
-  \label{literal-blocks}%
-}
+\section{2.7   Literal Blocks}
 
 Literal blocks are indicated with a double-colon (\textquotedbl{}::\textquotedbl{}) at the end of
 the preceding paragraph (over there \texttt{-{}->}).  They can be indented:
@@ -558,9 +535,7 @@ Or they can be quoted without indentation:
 \end{quote}
 
 
-\section{2.8   Line Blocks%
-  \label{line-blocks}%
-}
+\section{2.8   Line Blocks}
 
 This section tests line blocks.  Line blocks are body elements which
 consist of lines and other line blocks.  Nested line blocks cause
@@ -653,9 +628,7 @@ also be centre-aligned:
 \end{selectlanguage}
 
 
-\section{2.9   Block Quotes%
-  \label{block-quotes}%
-}
+\section{2.9   Block Quotes}
 
 Block quotes consist of indented body elements:
 
@@ -683,9 +656,7 @@ notamment dans la documentation du langage Python.
 \end{selectlanguage}
 
 
-\section{2.10   Doctest Blocks%
-  \label{doctest-blocks}%
-}
+\section{2.10   Doctest Blocks}
 
 \begin{quote}
 \begin{alltt}
@@ -697,9 +668,7 @@ Python-specific usage examples; begun with ">>>"
 \end{quote}
 
 
-\section{2.11   Footnotes%
-  \label{footnotes}%
-}
+\section{2.11   Footnotes}
 %
 \DUfootnotetext{footnote-1}{footnote-reference-1}{1}{%
 A footnote contains body elements, consistently indented by at
@@ -740,9 +709,7 @@ nonexistent footnote:%
 }
 
 
-\section{2.12   Citations%
-  \label{citations}%
-}
+\section{2.12   Citations}
 \begin{figure}[b]\raisebox{1em}{\hypertarget{cit2002}{}}[CIT2002]
 Citations are text-labeled footnotes. They may be
 rendered separately and differently from footnotes.
@@ -777,18 +744,14 @@ Here's a %
 error.
 
 
-\subsection{2.13.1   Duplicate Target Names%
-  \label{duplicate-target-names}%
-}
+\subsection{2.13.1   Duplicate Target Names}
 
 Duplicate names in section headers or other implicit targets will
 generate \textquotedbl{}info\textquotedbl{} (level-1) system messages.  Duplicate names in
 explicit targets will generate \textquotedbl{}warning\textquotedbl{} (level-2) system messages.
 
 
-\subsection{2.13.2   Duplicate Target Names%
-  \label{duplicate-target-names-1}%
-}
+\subsection{2.13.2   Duplicate Target Names}
 
 Since there are two \textquotedbl{}Duplicate Target Names\textquotedbl{} section headers, we
 cannot uniquely refer to either of them by name.  If we try to (like
@@ -804,18 +767,14 @@ These are just a sample of the many reStructuredText Directives.  For
 others, please see \href{https://docutils.sourceforge.io/docs/ref/rst/directives.html}{reStructuredText Directives}\DUfootnotemark{footnote-reference-18}{footnote-10}{9}.
 
 
-\subsection{2.14.1   Document Parts%
-  \label{document-parts}%
-}
+\subsection{2.14.1   Document Parts}
 
 An example of the \textquotedbl{}contents\textquotedbl{} directive can be seen above this section
 (a local, untitled table of \hyperref[contents]{contents}) and at the beginning of the
 document (a document-wide \hyperref[table-of-contents]{table of contents}).
 
 
-\subsection{2.14.2   Images and Figures%
-  \label{images-and-figures}%
-}
+\subsection{2.14.2   Images and Figures}
 
 An image directive (also clickable -{}- a hyperlink reference):
 
@@ -956,9 +915,7 @@ This paragraph might flow around the figure. The specific behavior depends
 upon the style sheet and the browser or rendering software used.
 
 
-\subsection{2.14.3   Tables%
-  \label{tables}%
-}
+\subsection{2.14.3   Tables}
 
 Tables may be given titles and additional arguments with the \emph{table}
 directive:
@@ -1101,9 +1058,7 @@ True & True & True \\
 \end{longtable*}
 
 
-\subsection{2.14.4   Admonitions%
-  \label{admonitions}%
-}
+\subsection{2.14.4   Admonitions}
 
 \DUadmonition[attention]{
 \DUtitle[attention]{Attention!}
@@ -1175,9 +1130,7 @@ You can make up your own admonition too.
 }
 
 
-\subsection{2.14.5   Topics, Sidebars, and Rubrics%
-  \label{topics-sidebars-and-rubrics}%
-}
+\subsection{2.14.5   Topics, Sidebars, and Rubrics}
 
 \emph{Sidebars} are like miniature, parallel documents.
 
@@ -1215,9 +1168,7 @@ Topics and rubrics can be used at places where a \hyperref[section-title]{sectio
 allowed (e.g. inside a directive).
 
 
-\subsection{2.14.6   Target Footnotes%
-  \label{target-footnotes}%
-}
+\subsection{2.14.6   Target Footnotes}
 %
 \DUfootnotetext{footnote-6}{footnote-reference-10}{5}{%
 \url{http://www.python.org/}
@@ -1244,16 +1195,12 @@ allowed (e.g. inside a directive).
 }
 
 
-\subsection{2.14.7   Replacement Text%
-  \label{replacement-text}%
-}
+\subsection{2.14.7   Replacement Text}
 
 I recommend you try \href{http://www.python.org/}{Python, \emph{the} best language around}\DUfootnotemark{footnote-reference-12}{footnote-6}{5}.
 
 
-\subsection{2.14.8   Compound Paragraph%
-  \label{compound-paragraph}%
-}
+\subsection{2.14.8   Compound Paragraph}
 
 The \emph{compound} directive is used to create a \textquotedbl{}compound paragraph\textquotedbl{}, which
 is a single logical paragraph containing multiple physical body
@@ -1386,9 +1333,7 @@ and the final paragraph of the compound 7.
 \end{DUclass}
 
 
-\subsection{2.14.9   Parsed Literal Blocks%
-  \label{parsed-literal-blocks}%
-}
+\subsection{2.14.9   Parsed Literal Blocks}
 
 \begin{quote}
 \ttfamily\raggedright
@@ -1403,9 +1348,7 @@ footnotes\DUfootnotemark{footnote-reference-9}{footnote-1}{1},~%
 \end{quote}
 
 
-\subsection{2.14.10   Code%
-  \label{code}%
-}
+\subsection{2.14.10   Code}
 
 Blocks of source code can be set with the \DUroletitlereference{code} directive. If the code
 language is specified, the content is parsed and tagged by the \href{http://pygments.org/}{Pygments}\DUfootnotemark{footnote-reference-13}{footnote-7}{6}
@@ -1460,9 +1403,7 @@ as a code block, here the rst file \texttt{header\_footer.rst} with line numbers
 \end{DUclass}
 
 
-\subsection{2.14.11   Meta%
-  \label{meta}%
-}
+\subsection{2.14.11   Meta}
 
 The \href{https://docutils.sourceforge.io/docs/ref/rst/directives.html\#metadata}{“meta” directive}\DUfootnotemark{footnote-reference-19}{footnote-11}{10} is used to specify metadata to be stored in,
 e.g., HTML META tags or ODT file properties.
@@ -1479,9 +1420,7 @@ A Unicode example:
 (Substitution definitions are only visible in the rST source.)
 
 
-\section{2.16   Comments%
-  \label{comments}%
-}
+\section{2.16   Comments}
 
 Here's one:
 
@@ -1496,9 +1435,7 @@ Here's one:
 (View the HTML/LaTeX/... source to see the comment.)
 
 
-\section{2.17   Raw text%
-  \label{raw-text}%
-}
+\section{2.17   Raw text}
 
 This does not necessarily look nice, because there may be missing white space.
 
@@ -1515,9 +1452,7 @@ This is the \DUrole{myrawroleclass}{fourth test} with myrawroleclass set.
 Fifth test in LaTeX.\\Line two.
 
 
-\section{2.18   Container%
-  \label{container}%
-}
+\section{2.18   Container}
 
 \begin{DUclass}{custom}
 paragraph 1
@@ -1529,9 +1464,7 @@ paragraph 2
 % .. include:: data/header_footer.rst
 
 
-\section{2.19   Colspanning tables%
-  \label{colspanning-tables}%
-}
+\section{2.19   Colspanning tables}
 
 This table has a cell spanning two columns:
 
@@ -1607,9 +1540,7 @@ True
 \end{longtable*}
 
 
-\section{2.20   Rowspanning tables%
-  \label{rowspanning-tables}%
-}
+\section{2.20   Rowspanning tables}
 
 Here's a table with cells spanning several rows:
 
@@ -1666,9 +1597,7 @@ body row 3
 \end{longtable*}
 
 
-\section{2.21   List Tables%
-  \label{list-tables}%
-}
+\section{2.21   List Tables}
 
 Here's a list table exercising all features:
 
@@ -1740,9 +1669,7 @@ Gannet Ripple & 1.99 \\
 \end{longtable}
 
 
-\section{2.22   Custom Roles%
-  \label{custom-roles}%
-}
+\section{2.22   Custom Roles}
 
 \begin{itemize}
 \item A role based on an existing role.
@@ -1784,9 +1711,7 @@ The following works in most browsers but does not validate
 \end{itemize}
 
 
-\section{2.23   Mathematics%
-  \label{mathematics}%
-}
+\section{2.23   Mathematics}
 
 Docutils supports inline math with the prefix or postfix \texttt{:math:}
 role specificator, $n! + \sin(x_n^2)$ and $A_\text{c} =
@@ -1900,18 +1825,14 @@ Cases with the \href{ftp://ftp.ams.org/ams/doc/amsmath/short-math-guide.pdf}{AMS
                   \end{cases}
 \end{equation*}
 
-\chapter{3   Tests for the LaTeX writer%
-  \label{tests-for-the-latex-writer}%
-}
+\chapter{3   Tests for the LaTeX writer}
 
 Test syntax elements which may cause trouble for the LaTeX writer but might
 not need to be tested with other writers. See also the
 \textquotedbl{}latex\_cornercases\textquotedbl{} test.
 
 
-\section{3.1   Custom Roles in LaTeX%
-  \label{custom-roles-in-latex}%
-}
+\section{3.1   Custom Roles in LaTeX}
 
 \begin{itemize}
 \item Role names and class arguments are converted to conform to the
@@ -1952,9 +1873,7 @@ This is a \DUroletitlereference{\DUrole{custom-title-reference}{customized title
 \end{itemize}
 
 
-\section{3.2   class handling%
-  \label{class-handling}%
-}
+\section{3.2   class handling}
 
 This section tests class handling for block level elements by the LaTeX
 writer. See the input file \texttt{classes\_latex.rst} for the raw LaTeX code used
@@ -2055,9 +1974,7 @@ writer for image, table, and line block elements.
 % preface for System Messages:
 
 
-\chapter{4   Error Handling%
-  \label{error-handling}%
-}
+\chapter{4   Error Handling}
 
 Any errors caught during processing will generate system messages.
 
@@ -2067,8 +1984,7 @@ section, \textquotedbl{}Docutils System Messages\textquotedbl{}:
 % section should be added by Docutils automatically
 
 
-\chapter[Docutils System Messages]{\color{red}Docutils System Messages%
-}
+\chapter[Docutils System Messages]{\color{red}Docutils System Messages}
 
 \raisebox{1em}{\hypertarget{system-message-1}{}}
 \DUadmonition[system-message]{
