--- a/docutils/test/functional/expected/length_units_latex.tex
+++ b/docutils/test/functional/expected/length_units_latex.tex
@@ -46,16 +46,13 @@
 
 %%% Body
 \begin{document}
-\title{Test length specifications%
-  \label{test-length-specifications}}
+\title{Test length specifications}
 \author{}
 \date{}
 \maketitle
 
 
-\section{Images and Figures%
-  \label{images-and-figures}%
-}
+\section{Images and Figures}
 
 \begin{figure}
 \noindent\makebox[\linewidth][c]{\includegraphics[scale=1]{../input/data/blue square.png}}
@@ -153,9 +150,7 @@
 \end{figure}
 
 
-\section{ch, em, and rem: \includegraphics[height=1\DUchdimen]{../input/data/blue square.png} \includegraphics[height=1em]{../input/data/blue square.png} \includegraphics[height=1\DUremdimen]{../input/data/blue square.png}%
-  \label{ch-em-and-rem-test1ch-test1em-test1rem}%
-}
+\section{ch, em, and rem: \includegraphics[height=1\DUchdimen]{../input/data/blue square.png} \includegraphics[height=1em]{../input/data/blue square.png} \includegraphics[height=1\DUremdimen]{../input/data/blue square.png}}
 
 Image height 1ch, 1em, and 1rem: \includegraphics[height=1\DUchdimen]{../input/data/blue square.png} \includegraphics[height=1em]{../input/data/blue square.png} \includegraphics[height=1\DUremdimen]{../input/data/blue square.png}
 
@@ -163,9 +158,7 @@ The units \textquotedbl{}em\textquotedbl{} and \textquotedbl{}ch\textquotedbl{} 
 The unit \textquotedbl{}rem\textquotedbl{} is tied to the document root fontsize.
 
 
-\section{Tables%
-  \label{tables}%
-}
+\section{Tables}
 
 \setlength{\DUtablewidth}{\dimexpr\linewidth-3\arrayrulewidth\relax}%
 \begin{longtable*}{|p{\DUcolumnwidth{0.500}}|p{\DUcolumnwidth{0.500}}|}
