--- a/docutils/test/functional/expected/standalone_rst_latex.tex
+++ b/docutils/test/functional/expected/standalone_rst_latex.tex
@@ -197,11 +197,9 @@
 %%% Body
 \begin{document}
 \title{reStructuredText Test Document%
-  \label{restructuredtext-test-document}%
   \label{doctitle}%
   \\%
   \DUdocumentsubtitle{Examples of Syntax Constructs}%
-  \label{examples-of-syntax-constructs}%
   \label{subtitle}}
 \author{}
 \date{}
@@ -268,14 +266,13 @@ reStructuredText construct.
 
 \pagebreak[4] % start ToC on new page
 
+\phantomsection\label{table-of-contents}
 \pdfbookmark[1]{Table of Contents}{table-of-contents}
 \renewcommand{\contentsname}{Table of Contents}
 \tableofcontents
 
 
-\section{1   Structural Elements%
-  \label{structural-elements}%
-}
+\section{1   Structural Elements}
 
 
 \subsection{1.1   Section Title%
@@ -288,14 +285,10 @@ activated with the \texttt{-{}-section-subtitles} command line option or the
 \texttt{sectsubtitle-xform} configuration value.
 
 
-\subsection{1.2   Empty Section%
-  \label{empty-section}%
-}
+\subsection{1.2   Empty Section}
 
 
-\subsection{1.3   Transitions%
-  \label{transitions}%
-}
+\subsection{1.3   Transitions}
 
 Here’s a transition:
 
@@ -313,9 +306,7 @@ It divides the section.  Transitions may also occur between sections:
 }
 
 
-\subsection{2.1   Paragraphs%
-  \label{paragraphs}%
-}
+\subsection{2.1   Paragraphs}
 
 A paragraph.
 
@@ -360,9 +351,7 @@ If the \texttt{-{}-pep-references} option was supplied, there should be a
 live link to PEP 258 here.
 
 
-\subsection{2.2   Bullet Lists%
-  \label{bullet-lists}%
-}
+\subsection{2.2   Bullet Lists}
 
 \begin{itemize}
 \item A bullet list
@@ -398,9 +387,7 @@ Paragraph 2 of item 2.
 \end{itemize}
 
 
-\subsection{2.3   Enumerated Lists%
-  \label{enumerated-lists}%
-}
+\subsection{2.3   Enumerated Lists}
 
 \begin{enumerate}
 \item Arabic numerals.
@@ -451,9 +438,7 @@ Paragraph 2 of item 2.
 \end{enumerate}
 
 
-\subsection{2.4   Definition Lists%
-  \label{definition-lists}%
-}
+\subsection{2.4   Definition Lists}
 
 \begin{description}
 \item[{Term}] 
@@ -472,9 +457,7 @@ Definition
 \end{description}
 
 
-\subsection{2.5   Field Lists%
-  \label{field-lists}%
-}
+\subsection{2.5   Field Lists}
 
 \begin{DUfieldlist}
 \item[{what:}]
@@ -495,9 +478,7 @@ doesn’t get stripped away.)}
 \end{DUfieldlist}
 
 
-\subsection{2.6   Option Lists%
-  \label{option-lists}%
-}
+\subsection{2.6   Option Lists}
 
 For listing command-line options:
 
@@ -525,9 +506,7 @@ There must be at least two spaces between the option and the
 description.
 
 
-\subsection{2.7   Literal Blocks%
-  \label{literal-blocks}%
-}
+\subsection{2.7   Literal Blocks}
 
 Literal blocks are indicated with a double-colon (“::”) at the end of
 the preceding paragraph (over there \texttt{-{}->}).  They can be indented:
@@ -552,9 +531,7 @@ Or they can be quoted without indentation:
 \end{quote}
 
 
-\subsection{2.8   Line Blocks%
-  \label{line-blocks}%
-}
+\subsection{2.8   Line Blocks}
 
 This section tests line blocks.  Line blocks are body elements which
 consist of lines and other line blocks.  Nested line blocks cause
@@ -647,9 +624,7 @@ also be centre-aligned:
 \end{selectlanguage}
 
 
-\subsection{2.9   Block Quotes%
-  \label{block-quotes}%
-}
+\subsection{2.9   Block Quotes}
 
 Block quotes consist of indented body elements:
 
@@ -677,9 +652,7 @@ notamment dans la documentation du langage Python.
 \end{selectlanguage}
 
 
-\subsection{2.10   Doctest Blocks%
-  \label{doctest-blocks}%
-}
+\subsection{2.10   Doctest Blocks}
 
 \begin{quote}
 \begin{alltt}
@@ -691,9 +664,7 @@ Python-specific usage examples; begun with ">>>"
 \end{quote}
 
 
-\subsection{2.11   Footnotes%
-  \label{footnotes}%
-}
+\subsection{2.11   Footnotes}
 %
 \DUfootnotetext{footnote-1}{footnote-reference-1}{1}{%
 A footnote contains body elements, consistently indented by at
@@ -734,9 +705,7 @@ nonexistent footnote:%
 }
 
 
-\subsection{2.12   Citations%
-  \label{citations}%
-}
+\subsection{2.12   Citations}
 \begin{figure}[b]\raisebox{1em}{\hypertarget{cit2002}{}}[CIT2002]
 Citations are text-labeled footnotes. They may be
 rendered separately and differently from footnotes.
@@ -771,18 +740,14 @@ Here’s a %
 error.
 
 
-\subsubsection{2.13.1   Duplicate Target Names%
-  \label{duplicate-target-names}%
-}
+\subsubsection{2.13.1   Duplicate Target Names}
 
 Duplicate names in section headers or other implicit targets will
 generate “info” (level-1) system messages.  Duplicate names in
 explicit targets will generate “warning” (level-2) system messages.
 
 
-\subsubsection{2.13.2   Duplicate Target Names%
-  \label{duplicate-target-names-1}%
-}
+\subsubsection{2.13.2   Duplicate Target Names}
 
 Since there are two “Duplicate Target Names” section headers, we
 cannot uniquely refer to either of them by name.  If we try to (like
@@ -798,18 +763,14 @@ These are just a sample of the many reStructuredText Directives.  For
 others, please see \href{https://docutils.sourceforge.io/docs/ref/rst/directives.html}{reStructuredText Directives}\DUfootnotemark{footnote-reference-18}{footnote-10}{9}.
 
 
-\subsubsection{2.14.1   Document Parts%
-  \label{document-parts}%
-}
+\subsubsection{2.14.1   Document Parts}
 
 An example of the “contents” directive can be seen above this section
 (a local, untitled table of \hyperref[contents]{contents}) and at the beginning of the
 document (a document-wide \hyperref[table-of-contents]{table of contents}).
 
 
-\subsubsection{2.14.2   Images and Figures%
-  \label{images-and-figures}%
-}
+\subsubsection{2.14.2   Images and Figures}
 
 An image directive (also clickable – a hyperlink reference):
 
@@ -950,9 +911,7 @@ This paragraph might flow around the figure. The specific behavior depends
 upon the style sheet and the browser or rendering software used.
 
 
-\subsubsection{2.14.3   Tables%
-  \label{tables}%
-}
+\subsubsection{2.14.3   Tables}
 
 Tables may be given titles and additional arguments with the \emph{table}
 directive:
@@ -1095,9 +1054,7 @@ True & True & True \\
 \end{longtable*}
 
 
-\subsubsection{2.14.4   Admonitions%
-  \label{admonitions}%
-}
+\subsubsection{2.14.4   Admonitions}
 
 \begin{DUclass}{attention}
 \begin{DUadmonition}
@@ -1189,9 +1146,7 @@ You can make up your own admonition too.
 \end{DUclass}
 
 
-\subsubsection{2.14.5   Topics, Sidebars, and Rubrics%
-  \label{topics-sidebars-and-rubrics}%
-}
+\subsubsection{2.14.5   Topics, Sidebars, and Rubrics}
 
 \emph{Sidebars} are like miniature, parallel documents.
 
@@ -1229,9 +1184,7 @@ Topics and rubrics can be used at places where a \hyperref[section-title]{sectio
 allowed (e.g. inside a directive).
 
 
-\subsubsection{2.14.6   Target Footnotes%
-  \label{target-footnotes}%
-}
+\subsubsection{2.14.6   Target Footnotes}
 %
 \DUfootnotetext{footnote-6}{footnote-reference-10}{5}{%
 \url{http://www.python.org/}
@@ -1258,16 +1211,12 @@ allowed (e.g. inside a directive).
 }
 
 
-\subsubsection{2.14.7   Replacement Text%
-  \label{replacement-text}%
-}
+\subsubsection{2.14.7   Replacement Text}
 
 I recommend you try \href{http://www.python.org/}{Python, \emph{the} best language around}\DUfootnotemark{footnote-reference-12}{footnote-6}{5}.
 
 
-\subsubsection{2.14.8   Compound Paragraph%
-  \label{compound-paragraph}%
-}
+\subsubsection{2.14.8   Compound Paragraph}
 
 The \emph{compound} directive is used to create a “compound paragraph”, which
 is a single logical paragraph containing multiple physical body
@@ -1401,9 +1350,7 @@ and the final paragraph of the compound 7.
 \end{DUclass}
 
 
-\subsubsection{2.14.9   Parsed Literal Blocks%
-  \label{parsed-literal-blocks}%
-}
+\subsubsection{2.14.9   Parsed Literal Blocks}
 
 \begin{quote}
 \ttfamily\raggedright
@@ -1418,9 +1365,7 @@ footnotes\DUfootnotemark{footnote-reference-9}{footnote-1}{1},~%
 \end{quote}
 
 
-\subsubsection{2.14.10   Code%
-  \label{code}%
-}
+\subsubsection{2.14.10   Code}
 
 Blocks of source code can be set with the \DUroletitlereference{code} directive. If the code
 language is specified, the content is parsed and tagged by the \href{http://pygments.org/}{Pygments}\DUfootnotemark{footnote-reference-13}{footnote-7}{6}
@@ -1475,9 +1420,7 @@ as a code block, here the rst file \texttt{header\_footer.rst} with line numbers
 \end{DUclass}
 
 
-\subsubsection{2.14.11   Meta%
-  \label{meta}%
-}
+\subsubsection{2.14.11   Meta}
 
 The \href{https://docutils.sourceforge.io/docs/ref/rst/directives.html\#metadata}{“meta” directive}\DUfootnotemark{footnote-reference-19}{footnote-11}{10} is used to specify metadata to be stored in,
 e.g., HTML META tags or ODT file properties.
@@ -1494,9 +1437,7 @@ A Unicode example:
 (Substitution definitions are only visible in the rST source.)
 
 
-\subsection{2.16   Comments%
-  \label{comments}%
-}
+\subsection{2.16   Comments}
 
 Here’s one:
 
@@ -1511,9 +1452,7 @@ Here’s one:
 (View the HTML/LaTeX/… source to see the comment.)
 
 
-\subsection{2.17   Raw text%
-  \label{raw-text}%
-}
+\subsection{2.17   Raw text}
 
 This does not necessarily look nice, because there may be missing white space.
 
@@ -1530,9 +1469,7 @@ This is the \DUrole{myrawroleclass}{fourth test} with myrawroleclass set.
 Fifth test in LaTeX.\\Line two.
 
 
-\subsection{2.18   Container%
-  \label{container}%
-}
+\subsection{2.18   Container}
 
 \begin{DUclass}{custom}
 paragraph 1
@@ -1544,9 +1481,7 @@ paragraph 2
 % .. include:: data/header_footer.rst
 
 
-\subsection{2.19   Colspanning tables%
-  \label{colspanning-tables}%
-}
+\subsection{2.19   Colspanning tables}
 
 This table has a cell spanning two columns:
 
@@ -1622,9 +1557,7 @@ True
 \end{longtable*}
 
 
-\subsection{2.20   Rowspanning tables%
-  \label{rowspanning-tables}%
-}
+\subsection{2.20   Rowspanning tables}
 
 Here’s a table with cells spanning several rows:
 
@@ -1681,9 +1614,7 @@ body row 3
 \end{longtable*}
 
 
-\subsection{2.21   List Tables%
-  \label{list-tables}%
-}
+\subsection{2.21   List Tables}
 
 Here’s a list table exercising all features:
 
@@ -1755,9 +1686,7 @@ Gannet Ripple & 1.99 \\
 \end{longtable}
 
 
-\subsection{2.22   Custom Roles%
-  \label{custom-roles}%
-}
+\subsection{2.22   Custom Roles}
 
 \begin{itemize}
 \item A role based on an existing role.
@@ -1799,9 +1728,7 @@ The following works in most browsers but does not validate
 \end{itemize}
 
 
-\subsection{2.23   Mathematics%
-  \label{mathematics}%
-}
+\subsection{2.23   Mathematics}
 
 Docutils supports inline math with the prefix or postfix \texttt{:math:}
 role specificator, $n! + \sin(x_n^2)$ and $A_\text{c} =
@@ -1915,18 +1842,14 @@ Cases with the \href{ftp://ftp.ams.org/ams/doc/amsmath/short-math-guide.pdf}{AMS
                   \end{cases}
 \end{equation*}
 
-\section{3   Tests for the LaTeX writer%
-  \label{tests-for-the-latex-writer}%
-}
+\section{3   Tests for the LaTeX writer}
 
 Test syntax elements which may cause trouble for the LaTeX writer but might
 not need to be tested with other writers. See also the
 “latex\_cornercases” test.
 
 
-\subsection{3.1   Custom Roles in LaTeX%
-  \label{custom-roles-in-latex}%
-}
+\subsection{3.1   Custom Roles in LaTeX}
 
 \begin{itemize}
 \item Role names and class arguments are converted to conform to the
@@ -1967,9 +1890,7 @@ This is a \DUroletitlereference{\DUrole{custom-title-reference}{customized title
 \end{itemize}
 
 
-\subsection{3.2   class handling%
-  \label{class-handling}%
-}
+\subsection{3.2   class handling}
 
 This section tests class handling for block level elements by the LaTeX
 writer. See the input file \texttt{classes\_latex.rst} for the raw LaTeX code used
@@ -2070,9 +1991,7 @@ writer for image, table, and line block elements.
 % preface for System Messages:
 
 
-\section{4   Error Handling%
-  \label{error-handling}%
-}
+\section{4   Error Handling}
 
 Any errors caught during processing will generate system messages.
 
@@ -2082,8 +2001,7 @@ section, “Docutils System Messages”:
 % section should be added by Docutils automatically
 
 
-\section[Docutils System Messages]{\color{red}Docutils System Messages%
-}
+\section[Docutils System Messages]{\color{red}Docutils System Messages}
 
 \raisebox{1em}{\hypertarget{system-message-1}{}}
 \begin{DUclass}{system-message}
