Move LaTeX styling for "html-roles" definitions to docutils.sty.
The "standard definition file" "html-roles.txt" contained a "raw" directive
with LaTeX macros for the styling of the "semantic markup" roles added by
this file. This leads to WARNING messages, if applications disable the "raw"
directive for security reasons.

Move the definitions to the LaTex package/stylefile "docutils.sty" and
ensure that relevant definitions are loaded on demand.

Nice side effects:

* works also if any of the roles are defined via the "role" directive
* less overhead if just some of the roles are used.

git-svn-id: http://svn.code.sf.net/p/docutils/code/trunk@10285 929543f6-e4f2-0310-98a6-ba3bd3dd1d04

--- a/docutils/docutils/writers/latex2e/docutils.sty
+++ b/docutils/docutils/writers/latex2e/docutils.sty
@@ -22,7 +22,7 @@
 
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{docutils}
-  [2025-08-06 macros for Docutils LaTeX output]
+  [2025-12-10 macros for Docutils LaTeX output]
 
 % Helpers
 % -------
@@ -148,6 +148,69 @@
     #2%
   \fi%
 }
+
+% Definitions for `semantic HTML inline markup`__ and representation of edits
+%
+% __ https://docutils.sourceforge.io/docs/ref/rst/definitions.html#additional-roles-for-html
+
+% inline role b::
+
+\providecommand{\DUroleb}{\textbf}
+
+% inline role del::
+
+\providecommand{\DUroledel}{\st}
+
+% inline role dfn::
+
+\providecommand{\DUroledfn}{\emph}
+
+% inline role i::
+
+\providecommand{\DUrolei}{\textit}
+
+% inline role ins::
+
+\providecommand{\DUroleins}{\ul}
+
+% inline role kbd::
+
+\providecommand{\DUrolekbd}{\texttt}
+
+% inline role mark::
+
+\providecommand{\DUrolemark}{\hl}
+
+% inline role q::
+
+\providecommand{\DUroleq}[1]{“#1”}
+
+% inline role s::
+
+\providecommand{\DUroles}{\st}
+
+% inline role small::
+
+\providecommand{\DUrolesmall}[1]{{\footnotesize #1}}
+
+% inline role st::
+
+\providecommand{\DUroledel}{\st}
+
+% inline role u::
+
+\providecommand{\DUroleu}{\ul}
+
+% inline role var::
+
+\providecommand{\DUrolevar}{\textit}
+
+% Fallback hacks (Docutils loads "soul" for better implementation)
+\providecommand{\hl}{\underline}
+\providecommand{\st}[1]{%
+  \raisebox{1ex}{\underline{\smash{\raisebox{-1ex}{#1}}}}%
+}
+\providecommand{\ul}{\underline}
 
 % legend::
 
